[package]
name = "kernel_driver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ntapi = { version = "0.4.0", default-features = false }
wdk-sys = { git = "https://github.com/microsoft/windows-drivers-rs", branch = "main", default-features = false }
winapi = { version = "0.3.9", features = ["ntstatus"] }

[features]
default = ["alloc"]
alloc = []
alloc_error_handler = []

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[build-dependencies]
cc = "1.0"